--- a/index.html
+++ b/index.html
@@ -176,26 +176,30 @@
       <p class="setup-similar-label">Петр Петров</p>
     </div>
   </template>
-
-  <script src="js/game.js"></script>
   <script>
-    var fireballSize = 22;
-    var getFireballSpeed = function (left) {
-      return left ? 5 : 2;
-    };
+    var fireballSize = 22; 
     var wizardSpeed = 3;
     var wizardWidth = 70;
+    //скорость, которая будет управлять скоростью фаербола в зависимости от направления ветра в игре. Если параметр left — true, то фаербол летит по ветру и функция возвращает скорость равную 5, иначе он летит против ветра со скоростью 2.
+    var getFireballSpeed = function (left) {
+    return left ? 5 : 2;
+    };
+    //возвращаем пропорциональную высоту мага
     var getWizardHeight = function () {
       return 1.337 * wizardWidth;
     };
+    // Задаем центр фигурки мага посередине игрового поля.
     var getWizardX = function (width) {
       return (width - wizardWidth) / 2;
     };
+    //Задаем положение мага высоте две трети игрового поля от земли.
     var getWizardY = function (height) {
       return (height / 3);
     };
 
   </script>
+  <script src="js/game.js"></script>
+
 </body>
 
 </html>
