выводим облако и текст

--- a/index.html
+++ b/index.html
@@ -177,10 +177,11 @@
     </div>
   </template>
   <script>
-    var fireballSize = 22; 
+    var fireballSize = 22;
     var wizardSpeed = 3;
     var wizardWidth = 70;
-    //скорость, которая будет управлять скоростью фаербола в зависимости от направления ветра в игре. Если параметр left — true, то фаербол летит по ветру и функция возвращает скорость равную 5, иначе он летит против ветра со скоростью 2.
+    //скорость, которая будет управлять скоростью фаербола в зависимости от направления ветра в игре.
+    // Если параметр left — true, то фаербол летит по ветру и функция возвращает скорость равную 5, иначе он летит против ветра со скоростью 2.
     var getFireballSpeed = function (left) {
     return left ? 5 : 2;
     };
@@ -198,6 +199,7 @@
     };
 
   </script>
+  <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
 
 </body>
